--- a/src/Scraping_pm2.ipynb
+++ b/src/Scraping_pm2.ipynb
@@ -300,12 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "9bb4f917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df['codigo_postal'] = df['codigo_postal'].astype(int)"
+    "df['codigo_postal'] = df['codigo_postal'].astype(int)"
    ]
   },
   {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6218cc9d",
+   "id": "80b229bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,6 +932,16 @@
     "    driver.quit()\n",
     "    return tmp\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "82941404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lo scrapeo por partes porque me esta dando problemas con chrome"
    ]
   },
   {
@@ -2907,14 +2917,6 @@
    "source": [
     "df1.to_csv('../data/preciometro1.csv', index=False, sep=',') "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de0481d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -8864,27 +8866,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "8af60f9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdlist=[df1,df2,df3,df4]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "b1c3ca45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pm2=pd.concat(pdlist)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "eeb59765",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6154 entries, 0 to 1537\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   pm2     6154 non-null   object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 96.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pm2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "88f9e637",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pm2.columns = ['pm2']"
+   ]
   },
   {
    "cell_type": "code",
@@ -8892,12 +8925,275 @@
    "id": "3adbc7d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#lo añado ahora al df del BOE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "8899c449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6154 entries, 0 to 6153\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   identificador         6154 non-null   object\n",
+      " 1   tipo_de_subasta       6154 non-null   object\n",
+      " 2   cuenta_expediente     6154 non-null   object\n",
+      " 3   fecha_de_inicio       6154 non-null   object\n",
+      " 4   fecha_de_conclusion   6154 non-null   object\n",
+      " 5   cantidad_reclamada    6154 non-null   int64 \n",
+      " 6   anuncio_BOE           6154 non-null   object\n",
+      " 7   valor_subasta         6154 non-null   int64 \n",
+      " 8   tasacion              6154 non-null   int64 \n",
+      " 9   puja_minima           6154 non-null   int64 \n",
+      " 10  tramos_entre_pujas    6154 non-null   int64 \n",
+      " 11  importe_del_deposito  6154 non-null   int64 \n",
+      " 12  direccion             6154 non-null   object\n",
+      " 13  codigo_postal         6154 non-null   int64 \n",
+      " 14  localidad             6154 non-null   object\n",
+      " 15  provincia             6154 non-null   object\n",
+      " 16  puja                  6154 non-null   int64 \n",
+      "dtypes: int64(8), object(9)\n",
+      "memory usage: 817.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "52a2f468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['pm2'] = pm2['pm2'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "8f7379fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identificador</th>\n",
+       "      <th>tipo_de_subasta</th>\n",
+       "      <th>cuenta_expediente</th>\n",
+       "      <th>fecha_de_inicio</th>\n",
+       "      <th>fecha_de_conclusion</th>\n",
+       "      <th>cantidad_reclamada</th>\n",
+       "      <th>anuncio_BOE</th>\n",
+       "      <th>valor_subasta</th>\n",
+       "      <th>tasacion</th>\n",
+       "      <th>puja_minima</th>\n",
+       "      <th>tramos_entre_pujas</th>\n",
+       "      <th>importe_del_deposito</th>\n",
+       "      <th>direccion</th>\n",
+       "      <th>codigo_postal</th>\n",
+       "      <th>localidad</th>\n",
+       "      <th>provincia</th>\n",
+       "      <th>puja</th>\n",
+       "      <th>pm2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SUB-JA-2022-204013</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>4743 0000 05 1018 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>7145</td>\n",
+       "      <td>BOE-B-2022-35270</td>\n",
+       "      <td>108482</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2169</td>\n",
+       "      <td>5424</td>\n",
+       "      <td>Urbanización Els Racons nº 5. partida Michafiga</td>\n",
+       "      <td>46220</td>\n",
+       "      <td>Picassent</td>\n",
+       "      <td>Valencia/València</td>\n",
+       "      <td>58580</td>\n",
+       "      <td>1088 €</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SUB-JA-2022-196067</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2368 0000 06 0191 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>142298</td>\n",
+       "      <td>BOE-B-2022-35269</td>\n",
+       "      <td>305832</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6116</td>\n",
+       "      <td>15291</td>\n",
+       "      <td>CALLE GABRIEL GARCÍA MÁRQUEZ, 31</td>\n",
+       "      <td>28980</td>\n",
+       "      <td>PARLA</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>177382</td>\n",
+       "      <td>1721 €</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SUB-JA-2022-204060</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2995 0000 06 0456 16</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>55933</td>\n",
+       "      <td>BOE-B-2022-35263</td>\n",
+       "      <td>247902</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12395</td>\n",
+       "      <td>VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...</td>\n",
+       "      <td>29600</td>\n",
+       "      <td>Marbella</td>\n",
+       "      <td>Málaga</td>\n",
+       "      <td>252000</td>\n",
+       "      <td>1721 €</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUB-JA-2022-198972</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>3997 0000 06 1661 20</td>\n",
+       "      <td>27-09-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>210425</td>\n",
+       "      <td>BOE-B-2022-28879</td>\n",
+       "      <td>826272</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16525</td>\n",
+       "      <td>41313</td>\n",
+       "      <td>AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...</td>\n",
+       "      <td>41930</td>\n",
+       "      <td>BORMUJOS</td>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>512288</td>\n",
+       "      <td>1557 €</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SUB-JA-2022-203383</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>5418 0000 06 0169 21</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>07-12-2022</td>\n",
+       "      <td>34853</td>\n",
+       "      <td>BOE-B-2022-35253</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>2433</td>\n",
+       "      <td>6084</td>\n",
+       "      <td>Calle Palma de Mallorca, nº 13, bloque 19, 3º ...</td>\n",
+       "      <td>35016</td>\n",
+       "      <td>Las Palmas de Gran Canaria</td>\n",
+       "      <td>Las Palmas</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>1130 €</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        identificador             tipo_de_subasta     cuenta_expediente  \\\n",
+       "0  SUB-JA-2022-204013  JUDICIAL EN VÍA DE APREMIO  4743 0000 05 1018 20   \n",
+       "1  SUB-JA-2022-196067  JUDICIAL EN VÍA DE APREMIO  2368 0000 06 0191 20   \n",
+       "2  SUB-JA-2022-204060  JUDICIAL EN VÍA DE APREMIO  2995 0000 06 0456 16   \n",
+       "3  SUB-JA-2022-198972  JUDICIAL EN VÍA DE APREMIO  3997 0000 06 1661 20   \n",
+       "4  SUB-JA-2022-203383  JUDICIAL EN VÍA DE APREMIO  5418 0000 06 0169 21   \n",
+       "\n",
+       "  fecha_de_inicio fecha_de_conclusion  cantidad_reclamada       anuncio_BOE  \\\n",
+       "0      17-11-2022          08-12-2022                7145  BOE-B-2022-35270   \n",
+       "1      17-11-2022          08-12-2022              142298  BOE-B-2022-35269   \n",
+       "2      17-11-2022          08-12-2022               55933  BOE-B-2022-35263   \n",
+       "3      27-09-2022          08-12-2022              210425  BOE-B-2022-28879   \n",
+       "4      17-11-2022          07-12-2022               34853  BOE-B-2022-35253   \n",
+       "\n",
+       "   valor_subasta  tasacion  puja_minima  tramos_entre_pujas  \\\n",
+       "0         108482         0            0                2169   \n",
+       "1         305832         0            0                6116   \n",
+       "2         247902         0            0                   0   \n",
+       "3         826272         0            0               16525   \n",
+       "4         121684    121684        45978                2433   \n",
+       "\n",
+       "   importe_del_deposito                                          direccion  \\\n",
+       "0                  5424    Urbanización Els Racons nº 5. partida Michafiga   \n",
+       "1                 15291                   CALLE GABRIEL GARCÍA MÁRQUEZ, 31   \n",
+       "2                 12395  VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...   \n",
+       "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
+       "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
+       "\n",
+       "   codigo_postal                   localidad          provincia    puja  \\\n",
+       "0          46220                   Picassent  Valencia/València   58580   \n",
+       "1          28980                       PARLA             Madrid  177382   \n",
+       "2          29600                    Marbella             Málaga  252000   \n",
+       "3          41930                    BORMUJOS            Sevilla  512288   \n",
+       "4          35016  Las Palmas de Gran Canaria         Las Palmas   45978   \n",
+       "\n",
+       "      pm2  \n",
+       "0  1088 €  \n",
+       "1  1721 €  \n",
+       "2  1721 €  \n",
+       "3  1557 €  \n",
+       "4  1130 €  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8899c449",
+   "id": "87835a87",
    "metadata": {},
    "outputs": [],
    "source": []
