--- a/src/Scraping_pm2.ipynb
+++ b/src/Scraping_pm2.ipynb
@@ -640,203 +640,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "0ee8525b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>identificador</th>\n",
-       "      <th>tipo_de_subasta</th>\n",
-       "      <th>cuenta_expediente</th>\n",
-       "      <th>fecha_de_inicio</th>\n",
-       "      <th>fecha_de_conclusion</th>\n",
-       "      <th>cantidad_reclamada</th>\n",
-       "      <th>anuncio_BOE</th>\n",
-       "      <th>valor_subasta</th>\n",
-       "      <th>tasacion</th>\n",
-       "      <th>puja_minima</th>\n",
-       "      <th>tramos_entre_pujas</th>\n",
-       "      <th>importe_del_deposito</th>\n",
-       "      <th>direccion</th>\n",
-       "      <th>codigo_postal</th>\n",
-       "      <th>localidad</th>\n",
-       "      <th>provincia</th>\n",
-       "      <th>puja</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SUB-JA-2022-204013</td>\n",
-       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
-       "      <td>4743 0000 05 1018 20</td>\n",
-       "      <td>17-11-2022</td>\n",
-       "      <td>08-12-2022</td>\n",
-       "      <td>7145</td>\n",
-       "      <td>BOE-B-2022-35270</td>\n",
-       "      <td>108482</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2169</td>\n",
-       "      <td>5424</td>\n",
-       "      <td>Urbanización Els Racons nº 5. partida Michafiga</td>\n",
-       "      <td>46220</td>\n",
-       "      <td>Picassent</td>\n",
-       "      <td>Valencia/València</td>\n",
-       "      <td>58580</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SUB-JA-2022-196067</td>\n",
-       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
-       "      <td>2368 0000 06 0191 20</td>\n",
-       "      <td>17-11-2022</td>\n",
-       "      <td>08-12-2022</td>\n",
-       "      <td>142298</td>\n",
-       "      <td>BOE-B-2022-35269</td>\n",
-       "      <td>305832</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6116</td>\n",
-       "      <td>15291</td>\n",
-       "      <td>CALLE GABRIEL GARCÍA MÁRQUEZ, 31</td>\n",
-       "      <td>28980</td>\n",
-       "      <td>PARLA</td>\n",
-       "      <td>Madrid</td>\n",
-       "      <td>177382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SUB-JA-2022-204060</td>\n",
-       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
-       "      <td>2995 0000 06 0456 16</td>\n",
-       "      <td>17-11-2022</td>\n",
-       "      <td>08-12-2022</td>\n",
-       "      <td>55933</td>\n",
-       "      <td>BOE-B-2022-35263</td>\n",
-       "      <td>247902</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12395</td>\n",
-       "      <td>VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...</td>\n",
-       "      <td>29600</td>\n",
-       "      <td>Marbella</td>\n",
-       "      <td>Málaga</td>\n",
-       "      <td>252000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SUB-JA-2022-198972</td>\n",
-       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
-       "      <td>3997 0000 06 1661 20</td>\n",
-       "      <td>27-09-2022</td>\n",
-       "      <td>08-12-2022</td>\n",
-       "      <td>210425</td>\n",
-       "      <td>BOE-B-2022-28879</td>\n",
-       "      <td>826272</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16525</td>\n",
-       "      <td>41313</td>\n",
-       "      <td>AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...</td>\n",
-       "      <td>41930</td>\n",
-       "      <td>BORMUJOS</td>\n",
-       "      <td>Sevilla</td>\n",
-       "      <td>512288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SUB-JA-2022-203383</td>\n",
-       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
-       "      <td>5418 0000 06 0169 21</td>\n",
-       "      <td>17-11-2022</td>\n",
-       "      <td>07-12-2022</td>\n",
-       "      <td>34853</td>\n",
-       "      <td>BOE-B-2022-35253</td>\n",
-       "      <td>121684</td>\n",
-       "      <td>121684</td>\n",
-       "      <td>45978</td>\n",
-       "      <td>2433</td>\n",
-       "      <td>6084</td>\n",
-       "      <td>Calle Palma de Mallorca, nº 13, bloque 19, 3º ...</td>\n",
-       "      <td>35016</td>\n",
-       "      <td>Las Palmas de Gran Canaria</td>\n",
-       "      <td>Las Palmas</td>\n",
-       "      <td>45978</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        identificador             tipo_de_subasta     cuenta_expediente  \\\n",
-       "0  SUB-JA-2022-204013  JUDICIAL EN VÍA DE APREMIO  4743 0000 05 1018 20   \n",
-       "1  SUB-JA-2022-196067  JUDICIAL EN VÍA DE APREMIO  2368 0000 06 0191 20   \n",
-       "2  SUB-JA-2022-204060  JUDICIAL EN VÍA DE APREMIO  2995 0000 06 0456 16   \n",
-       "3  SUB-JA-2022-198972  JUDICIAL EN VÍA DE APREMIO  3997 0000 06 1661 20   \n",
-       "4  SUB-JA-2022-203383  JUDICIAL EN VÍA DE APREMIO  5418 0000 06 0169 21   \n",
-       "\n",
-       "  fecha_de_inicio fecha_de_conclusion  cantidad_reclamada       anuncio_BOE  \\\n",
-       "0      17-11-2022          08-12-2022                7145  BOE-B-2022-35270   \n",
-       "1      17-11-2022          08-12-2022              142298  BOE-B-2022-35269   \n",
-       "2      17-11-2022          08-12-2022               55933  BOE-B-2022-35263   \n",
-       "3      27-09-2022          08-12-2022              210425  BOE-B-2022-28879   \n",
-       "4      17-11-2022          07-12-2022               34853  BOE-B-2022-35253   \n",
-       "\n",
-       "   valor_subasta  tasacion  puja_minima  tramos_entre_pujas  \\\n",
-       "0         108482         0            0                2169   \n",
-       "1         305832         0            0                6116   \n",
-       "2         247902         0            0                   0   \n",
-       "3         826272         0            0               16525   \n",
-       "4         121684    121684        45978                2433   \n",
-       "\n",
-       "   importe_del_deposito                                          direccion  \\\n",
-       "0                  5424    Urbanización Els Racons nº 5. partida Michafiga   \n",
-       "1                 15291                   CALLE GABRIEL GARCÍA MÁRQUEZ, 31   \n",
-       "2                 12395  VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...   \n",
-       "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
-       "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
-       "\n",
-       "  codigo_postal                   localidad          provincia    puja  \n",
-       "0         46220                   Picassent  Valencia/València   58580  \n",
-       "1         28980                       PARLA             Madrid  177382  \n",
-       "2         29600                    Marbella             Málaga  252000  \n",
-       "3         41930                    BORMUJOS            Sevilla  512288  \n",
-       "4         35016  Las Palmas de Gran Canaria         Las Palmas   45978  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "id": "610dad3f",
    "metadata": {},
@@ -868,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "80b229bf",
+   "id": "042b33b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "82941404",
+   "id": "0f56a1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8912,7 +8715,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "88f9e637",
+   "id": "aa7374dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8973,7 +8776,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "52a2f468",
+   "id": "c98d4713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8982,8 +8785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "8f7379fc",
+   "execution_count": 102,
+   "id": "faff0711",
    "metadata": {},
    "outputs": [
     {
@@ -9047,7 +8850,7 @@
        "      <td>Picassent</td>\n",
        "      <td>Valencia/València</td>\n",
        "      <td>58580</td>\n",
-       "      <td>1088 €</td>\n",
+       "      <td>1088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -9068,7 +8871,7 @@
        "      <td>PARLA</td>\n",
        "      <td>Madrid</td>\n",
        "      <td>177382</td>\n",
-       "      <td>1721 €</td>\n",
+       "      <td>1721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -9089,7 +8892,7 @@
        "      <td>Marbella</td>\n",
        "      <td>Málaga</td>\n",
        "      <td>252000</td>\n",
-       "      <td>1721 €</td>\n",
+       "      <td>1721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -9110,7 +8913,7 @@
        "      <td>BORMUJOS</td>\n",
        "      <td>Sevilla</td>\n",
        "      <td>512288</td>\n",
-       "      <td>1557 €</td>\n",
+       "      <td>1557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -9131,7 +8934,7 @@
        "      <td>Las Palmas de Gran Canaria</td>\n",
        "      <td>Las Palmas</td>\n",
        "      <td>45978</td>\n",
-       "      <td>1130 €</td>\n",
+       "      <td>1130</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -9166,22 +8969,15 @@
        "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
        "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
        "\n",
-       "   codigo_postal                   localidad          provincia    puja  \\\n",
-       "0          46220                   Picassent  Valencia/València   58580   \n",
-       "1          28980                       PARLA             Madrid  177382   \n",
-       "2          29600                    Marbella             Málaga  252000   \n",
-       "3          41930                    BORMUJOS            Sevilla  512288   \n",
-       "4          35016  Las Palmas de Gran Canaria         Las Palmas   45978   \n",
-       "\n",
-       "      pm2  \n",
-       "0  1088 €  \n",
-       "1  1721 €  \n",
-       "2  1721 €  \n",
-       "3  1557 €  \n",
-       "4  1130 €  "
+       "   codigo_postal                   localidad          provincia    puja   pm2  \n",
+       "0          46220                   Picassent  Valencia/València   58580  1088  \n",
+       "1          28980                       PARLA             Madrid  177382  1721  \n",
+       "2          29600                    Marbella             Málaga  252000  1721  \n",
+       "3          41930                    BORMUJOS            Sevilla  512288  1557  \n",
+       "4          35016  Las Palmas de Gran Canaria         Las Palmas   45978  1130  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9192,8 +8988,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "53826ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#limpiamos el signo de euros\n",
+    "df['pm2'] =df['pm2'].replace('\\u20AC','',regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "c178b683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1088 ', '1721 ', '1557 ', ..., '3695 ', '1986 ', '320 '],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.pm2.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "0ad4fc01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(df['pm2'].where(df['pm2'] == 'N / A'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "4e7c5789",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(identificador                                     SUB-JA-2022-204132\n",
+       " tipo_de_subasta                           JUDICIAL EN VÍA DE APREMIO\n",
+       " cuenta_expediente                               2459 0000 00 0168 21\n",
+       " fecha_de_inicio                                           17-11-2022\n",
+       " fecha_de_conclusion                                       07-12-2022\n",
+       " cantidad_reclamada                                             83205\n",
+       " anuncio_BOE                                         BOE-B-2022-35261\n",
+       " valor_subasta                                                 351319\n",
+       " tasacion                                                           0\n",
+       " puja_minima                                                      200\n",
+       " tramos_entre_pujas                                              7026\n",
+       " importe_del_deposito                                           17565\n",
+       " direccion               Calle Santa Lucia, 3 - Piso: 1 - Puerta: EXT\n",
+       " codigo_postal                                                  28004\n",
+       " localidad                                                     Madrid\n",
+       " provincia                                                     Madrid\n",
+       " puja                                                          316387\n",
+       " pm2                                                            5998 \n",
+       " Name: 14, dtype: object,\n",
+       " [-1])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[14],[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "87835a87",
+   "id": "2af7c857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df[[\"pm2\"]].mean()\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "a759b522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#añadimos la media de los pm2\n",
+    "def limpiar(x):\n",
+    "    \n",
+    "    if 'N / A' in x:\n",
+    "        return '1200'\n",
+    "    else:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "53833d12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"pm2\"] = df[\"pm2\"].apply(limpiar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "72861333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['pm2'] = df['pm2'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "c3ccc68b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/BOE_def.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d1a1f92b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('../data/BOE_def.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97196209",
    "metadata": {},
    "outputs": [],
    "source": []
