--- a/src/Limpieza_BOE.ipynb
+++ b/src/Limpieza_BOE.ipynb
@@ -32,263 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e6fc6a0b",
+   "execution_count": null,
+   "id": "e9c00362",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1=pd.read_csv('../data/BOE1.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "da56d24a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2=pd.read_csv('../data/BOE2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "aaa6d1a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df3=pd.read_csv('../data/BOE3.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0fc5ffd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df4=pd.read_csv('../data/BOE4.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "144e778f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df5=pd.read_csv('../data/BOE5.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "88b76033",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df6=pd.read_csv('../data/BOE6.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "6f03e1d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df7=pd.read_csv('../data/BOE7.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "40d7e821",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df8=pd.read_csv('../data/BOE8.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7f8b6f8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df9=pd.read_csv('../data/BOE9.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1a1d1c96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df10=pd.read_csv('../data/BOE10.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "7b0a898f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df11=pd.read_csv('../data/BOE11.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "763aedaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df12=pd.read_csv('../data/BOE12.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "09851838",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df13=pd.read_csv('../data/BOE13.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "691afe80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df14=pd.read_csv('../data/BOE14.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4b8d53b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df15=pd.read_csv('../data/BOE15.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "69383123",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df16=pd.read_csv('../data/BOE16.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "470e5b66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df17=pd.read_csv('../data/BOE17.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "7483279c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df18=pd.read_csv('../data/BOE18.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "2928a7ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df19=pd.read_csv('../data/BOE19.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "572b84a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames=[df1,df2,df3,df4,df5,df6,df7,df8,df9,df10,df11,df12,df13,df14,df15,df16,df17,df18,df19]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "215d5b18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boe=pd.concat(frames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "82bd3b4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 9392 entries, 0 to 391\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   0       9392 non-null   object\n",
-      " 1   1       9392 non-null   object\n",
-      " 2   2       9392 non-null   object\n",
-      " 3   3       9392 non-null   object\n",
-      " 4   4       9392 non-null   object\n",
-      " 5   5       9392 non-null   object\n",
-      " 6   6       9392 non-null   object\n",
-      " 7   7       9392 non-null   object\n",
-      " 8   8       9392 non-null   object\n",
-      " 9   9       9392 non-null   object\n",
-      " 10  10      9249 non-null   object\n",
-      " 11  11      9245 non-null   object\n",
-      " 12  12      7350 non-null   object\n",
-      " 13  13      7306 non-null   object\n",
-      " 14  14      7181 non-null   object\n",
-      " 15  15      6322 non-null   object\n",
-      " 16  16      6155 non-null   object\n",
-      "dtypes: object(17)\n",
-      "memory usage: 1.3+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "boe.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "74c84ed8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boe.to_csv('../data/BOEtotal.csv', index=False, sep=',') "
+    "boe=pd.read_csv('../data/BOEtotal.csv')"
    ]
   },
   {
