--- a/src/Prueba_ Best_MachineLearning-Copy1.ipynb
+++ b/src/Prueba_ Best_MachineLearning-Copy1.ipynb
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "95b7bedf",
+   "id": "575aee5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b5c54267",
+   "id": "eebfe83c",
    "metadata": {},
    "outputs": [
     {
@@ -6964,7 +6964,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0fc4710f",
+   "id": "92afdf6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7027,7 +7027,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "20cccb0a",
+   "id": "6147f8a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7037,7 +7037,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9e3512de",
+   "id": "8ba6813c",
    "metadata": {},
    "outputs": [
     {
@@ -9395,7 +9395,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "344302ec",
+   "id": "ea0d58d9",
    "metadata": {},
    "outputs": [
     {
@@ -9420,7 +9420,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "80844e98",
+   "id": "173eca78",
    "metadata": {},
    "outputs": [
     {
@@ -9441,7 +9441,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c24bba88",
+   "id": "19cb33b1",
    "metadata": {},
    "outputs": [
     {
@@ -9466,7 +9466,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8adc6fac",
+   "id": "79d1e0a8",
    "metadata": {},
    "outputs": [
     {
@@ -9487,7 +9487,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0920b24e",
+   "id": "284ac10a",
    "metadata": {},
    "outputs": [
     {
@@ -9512,7 +9512,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c6aa06fe",
+   "id": "98e3272c",
    "metadata": {},
    "outputs": [
     {
@@ -9537,7 +9537,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f2c2ca65",
+   "id": "615153df",
    "metadata": {},
    "outputs": [
     {
@@ -9562,7 +9562,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b9f4af6d",
+   "id": "c07496c0",
    "metadata": {},
    "outputs": [
     {
@@ -9586,7 +9586,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4ee3afff",
+   "id": "1b9620d0",
    "metadata": {},
    "outputs": [
     {
@@ -9611,7 +9611,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "29c40f5b",
+   "id": "3ee14f77",
    "metadata": {},
    "outputs": [
     {
@@ -9635,7 +9635,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "48a234e9",
+   "id": "c26c3dcd",
    "metadata": {},
    "outputs": [
     {
@@ -9659,11 +9659,11 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "61c2ade8",
+   "id": "7d8f60f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#40%r2 aplicando funcion provincias, el resto dummies y labelencoder. 9 1 71"
+    "#lgbmr 40%r2 aplicando funcion provincias, el resto dummies y labelencoder. 9 1 71"
    ]
   },
   {
@@ -9793,8 +9793,292 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "69f3149c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6154 entries, 0 to 6153\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   identificador         6154 non-null   object\n",
+      " 1   tipo_de_subasta       6154 non-null   object\n",
+      " 2   cuenta_expediente     6154 non-null   object\n",
+      " 3   fecha_de_inicio       6154 non-null   object\n",
+      " 4   fecha_de_conclusion   6154 non-null   object\n",
+      " 5   cantidad_reclamada    6154 non-null   int64 \n",
+      " 6   anuncio_BOE           6154 non-null   object\n",
+      " 7   valor_subasta         6154 non-null   int64 \n",
+      " 8   tasacion              6154 non-null   int64 \n",
+      " 9   puja_minima           6154 non-null   int64 \n",
+      " 10  tramos_entre_pujas    6154 non-null   int64 \n",
+      " 11  importe_del_deposito  6154 non-null   int64 \n",
+      " 12  direccion             6154 non-null   object\n",
+      " 13  codigo_postal         6154 non-null   int64 \n",
+      " 14  localidad             6154 non-null   object\n",
+      " 15  provincia             6154 non-null   object\n",
+      " 16  puja                  6154 non-null   int64 \n",
+      " 17  pm2                   6154 non-null   int64 \n",
+      "dtypes: int64(9), object(9)\n",
+      "memory usage: 865.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "boe_sinPuja=pd.read_csv('../data/BOE_def.csv')\n",
+    "\n",
+    "boe_sinPuja.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "adbb3174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boe_sinPuja.drop(columns=['puja'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e664534b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identificador</th>\n",
+       "      <th>tipo_de_subasta</th>\n",
+       "      <th>cuenta_expediente</th>\n",
+       "      <th>fecha_de_inicio</th>\n",
+       "      <th>fecha_de_conclusion</th>\n",
+       "      <th>cantidad_reclamada</th>\n",
+       "      <th>anuncio_BOE</th>\n",
+       "      <th>valor_subasta</th>\n",
+       "      <th>tasacion</th>\n",
+       "      <th>puja_minima</th>\n",
+       "      <th>tramos_entre_pujas</th>\n",
+       "      <th>importe_del_deposito</th>\n",
+       "      <th>direccion</th>\n",
+       "      <th>codigo_postal</th>\n",
+       "      <th>localidad</th>\n",
+       "      <th>provincia</th>\n",
+       "      <th>pm2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SUB-JA-2022-204013</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>4743 0000 05 1018 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>7145</td>\n",
+       "      <td>BOE-B-2022-35270</td>\n",
+       "      <td>108482</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2169</td>\n",
+       "      <td>5424</td>\n",
+       "      <td>Urbanización Els Racons nº 5. partida Michafiga</td>\n",
+       "      <td>46220</td>\n",
+       "      <td>Picassent</td>\n",
+       "      <td>Valencia/València</td>\n",
+       "      <td>1088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SUB-JA-2022-196067</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2368 0000 06 0191 20</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>142298</td>\n",
+       "      <td>BOE-B-2022-35269</td>\n",
+       "      <td>305832</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6116</td>\n",
+       "      <td>15291</td>\n",
+       "      <td>CALLE GABRIEL GARCÍA MÁRQUEZ, 31</td>\n",
+       "      <td>28980</td>\n",
+       "      <td>PARLA</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>1721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SUB-JA-2022-204060</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>2995 0000 06 0456 16</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>55933</td>\n",
+       "      <td>BOE-B-2022-35263</td>\n",
+       "      <td>247902</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12395</td>\n",
+       "      <td>VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...</td>\n",
+       "      <td>29600</td>\n",
+       "      <td>Marbella</td>\n",
+       "      <td>Málaga</td>\n",
+       "      <td>1721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUB-JA-2022-198972</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>3997 0000 06 1661 20</td>\n",
+       "      <td>27-09-2022</td>\n",
+       "      <td>08-12-2022</td>\n",
+       "      <td>210425</td>\n",
+       "      <td>BOE-B-2022-28879</td>\n",
+       "      <td>826272</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16525</td>\n",
+       "      <td>41313</td>\n",
+       "      <td>AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...</td>\n",
+       "      <td>41930</td>\n",
+       "      <td>BORMUJOS</td>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>1557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SUB-JA-2022-203383</td>\n",
+       "      <td>JUDICIAL EN VÍA DE APREMIO</td>\n",
+       "      <td>5418 0000 06 0169 21</td>\n",
+       "      <td>17-11-2022</td>\n",
+       "      <td>07-12-2022</td>\n",
+       "      <td>34853</td>\n",
+       "      <td>BOE-B-2022-35253</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>121684</td>\n",
+       "      <td>45978</td>\n",
+       "      <td>2433</td>\n",
+       "      <td>6084</td>\n",
+       "      <td>Calle Palma de Mallorca, nº 13, bloque 19, 3º ...</td>\n",
+       "      <td>35016</td>\n",
+       "      <td>Las Palmas de Gran Canaria</td>\n",
+       "      <td>Las Palmas</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        identificador             tipo_de_subasta     cuenta_expediente  \\\n",
+       "0  SUB-JA-2022-204013  JUDICIAL EN VÍA DE APREMIO  4743 0000 05 1018 20   \n",
+       "1  SUB-JA-2022-196067  JUDICIAL EN VÍA DE APREMIO  2368 0000 06 0191 20   \n",
+       "2  SUB-JA-2022-204060  JUDICIAL EN VÍA DE APREMIO  2995 0000 06 0456 16   \n",
+       "3  SUB-JA-2022-198972  JUDICIAL EN VÍA DE APREMIO  3997 0000 06 1661 20   \n",
+       "4  SUB-JA-2022-203383  JUDICIAL EN VÍA DE APREMIO  5418 0000 06 0169 21   \n",
+       "\n",
+       "  fecha_de_inicio fecha_de_conclusion  cantidad_reclamada       anuncio_BOE  \\\n",
+       "0      17-11-2022          08-12-2022                7145  BOE-B-2022-35270   \n",
+       "1      17-11-2022          08-12-2022              142298  BOE-B-2022-35269   \n",
+       "2      17-11-2022          08-12-2022               55933  BOE-B-2022-35263   \n",
+       "3      27-09-2022          08-12-2022              210425  BOE-B-2022-28879   \n",
+       "4      17-11-2022          07-12-2022               34853  BOE-B-2022-35253   \n",
+       "\n",
+       "   valor_subasta  tasacion  puja_minima  tramos_entre_pujas  \\\n",
+       "0         108482         0            0                2169   \n",
+       "1         305832         0            0                6116   \n",
+       "2         247902         0            0                   0   \n",
+       "3         826272         0            0               16525   \n",
+       "4         121684    121684        45978                2433   \n",
+       "\n",
+       "   importe_del_deposito                                          direccion  \\\n",
+       "0                  5424    Urbanización Els Racons nº 5. partida Michafiga   \n",
+       "1                 15291                   CALLE GABRIEL GARCÍA MÁRQUEZ, 31   \n",
+       "2                 12395  VIVIENDA 1 BLOQUE 19 CONJUNTO RESIDENCIAL HACI...   \n",
+       "3                 41313  AVENIDA DE JACARANDA, 5, URBANIZACION CLUB DE ...   \n",
+       "4                  6084  Calle Palma de Mallorca, nº 13, bloque 19, 3º ...   \n",
+       "\n",
+       "   codigo_postal                   localidad          provincia   pm2  \n",
+       "0          46220                   Picassent  Valencia/València  1088  \n",
+       "1          28980                       PARLA             Madrid  1721  \n",
+       "2          29600                    Marbella             Málaga  1721  \n",
+       "3          41930                    BORMUJOS            Sevilla  1557  \n",
+       "4          35016  Las Palmas de Gran Canaria         Las Palmas  1130  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boe_sinPuja.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "9aa06fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boe_sinPuja.to_csv('../data/BOE_Sin_Puja.csv', index=False, sep=',') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "5fa5fc35",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Number of features of the model must match the input. Model n_features_ is 32 and input n_features is 33 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [63]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pred_lgbmr\u001b[38;5;241m=\u001b[39m\u001b[43mlgbmr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboe\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/lightgbm/sklearn.py:722\u001b[0m, in \u001b[0;36mLGBMModel.predict\u001b[0;34m(self, X, raw_score, start_iteration, num_iteration, pred_leaf, pred_contrib, **kwargs)\u001b[0m\n\u001b[1;32m    720\u001b[0m n_features \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    721\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_n_features \u001b[38;5;241m!=\u001b[39m n_features:\n\u001b[0;32m--> 722\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of features of the model must \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    723\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatch the input. Model n_features_ is \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    724\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput n_features is \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    725\u001b[0m                      \u001b[38;5;241m%\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_n_features, n_features))\n\u001b[1;32m    726\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_Booster\u001b[38;5;241m.\u001b[39mpredict(X, raw_score\u001b[38;5;241m=\u001b[39mraw_score, start_iteration\u001b[38;5;241m=\u001b[39mstart_iteration, num_iteration\u001b[38;5;241m=\u001b[39mnum_iteration,\n\u001b[1;32m    727\u001b[0m                              pred_leaf\u001b[38;5;241m=\u001b[39mpred_leaf, pred_contrib\u001b[38;5;241m=\u001b[39mpred_contrib, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[0;31mValueError\u001b[0m: Number of features of the model must match the input. Model n_features_ is 32 and input n_features is 33 "
+     ]
+    }
+   ],
+   "source": [
+    "pred_lgbmr=lgbmr.predict(boe)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "baeddd34",
+   "id": "c6496f63",
    "metadata": {},
    "outputs": [],
    "source": []
